--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<style>
+  * {font-family: inter, helvetica, sans-serif;}
+</style>
 <body>
 <h1>partdirector website</h1>
 </body>
