--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 <style>
   * {font-family: inter, helvetica, sans-serif;}
+  img {width: 75vw;}
+  div {
+       display: grid;
+       place-items: center;
+     }
 </style>
 <body>
-<h1>partdirector website</h1>
+  <div>
+    <img src="DSCF2236-preview.jpg"> 
+  </div>
 </body>
 </html>
