--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   div {
        display: grid;
        place-items: center;
+       align-items: center;
      }
 </style>
 <body>
   <div>
-    <img src="DSCF2236-preview.jpg"> 
+    <img src="DSCF2236-preview.jpg">
   </div>
 </body>
 </html>
