--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <style>
   * {font-family: inter, helvetica, sans-serif;}
-  img {width: 75vw;}
+  img {width: 70vw;}
   div {
        display: grid;
        place-items: center;
        align-items: center;
+       height: 98vh;
      }
 </style>
 <body>
