--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
-<style>
-  * {font-family: inter, helvetica, sans-serif;}
-  img {width: 70vw;}
-  div {
-       display: grid;
-       place-items: center;
-       align-items: center;
-       height: 98vh;
-     }
-</style>
+<head>
+  <title>partdirector</title>
+  <style>
+    * {font-family: inter, helvetica, sans-serif; color: #40403e;}
+    img {width: 70vw;}
+    div {
+         display: grid;
+         place-items: center;
+         align-items: center;
+         height: 98vh;
+       }
+  </style>
+</head>
 <body>
   <div>
     <img src="DSCF2236-preview.jpg">
+    <small>Forte Dei Marmi, 2021</small>
   </div>
 </body>
 </html>
