--- a/book/index.html
+++ b/book/index.html
@@ -8,12 +8,13 @@
     h1, h2 { /* replace with your selector */
     	font-family: "CoFo Sans Bold";
     	font-weight: normal;
-    	font-style: normal;}
-    p { /* replace with your selector */
-    	font-family: "CoFo Robert Book";
-    	font-weight: normal;
     	font-style: normal;
     }
+    p { /* replace with your selector */
+    	font-family: "CoFo Robert Book";
+      line-height: 2em;
+    }
+    body {max-width: 960px;}
   </style>
 </head>
 <body>
