--- a/book/index.html
+++ b/book/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>The Book</title>
   <link rel="stylesheet" href="https://webfonts.fontstand.com/WF-000923-3b82c32aafbb7a601c163d8073b980c7.css" type="text/css"/>
   <style>
-    * {font-family: inter, helvetica, sans-serif; color: #40403e;}
+    * {color: #40403e; padding: 0; margin: 0;}
     h1, h2 { /* replace with your selector */
     	font-family: "CoFo Sans Bold";
     	font-weight: normal;
     	font-style: normal;
     }
-    p { /* replace with your selector */
+    h3, p { /* replace with your selector */
     	font-family: "CoFo Robert Book";
+      font-weight: normal;
+    	font-style: normal;
       line-height: 2em;
+      margin-top: 1em;
+      margin-bottom: 1em;
+      font-size: 1.5em;
     }
-    body {max-width: 960px;}
+
+    h1 {font-size: 8em; line-height: 1em; margin-top: 3em;}
+    h2 {font-size: 4em; margin-top: 4em; line-height: 1em;}
+    body {max-width: 960px; padding: 2em;}
   </style>
 </head>
 <body>
-  <h1>I’m not sure that this book is only about the South.</h2>
+  <p>Olga Virich</p>
+  <h1>Not Far Ahead</h1>
+  <h3>Krasnodar 2021</h3>
+  <h2>I’m not sure that this book is only about the South.</h2>
   <p>Of course, it’s about Russia, but I think there is much of the South in it.</p>
   <p>I think, not only my family and close ones influenced my attitude to life but also “the southern familiarity” as I like to say.</p>
   <p>Because of a warm climate people are closer to each other and spend much time outside. When I was a kid, one couldn’t take us back home while we were spending time outside. Our outdoor activities were accompanied by the eyes of mums who were messing around in flower beds and dads swearing under the cars meanwhile. Also every grandma and grandpa who lived both in our or the neighbours’ yard were ready to give water to any kid who was not able to reach the water pump by himself anymore. We knocked on any door on the first floor and the thirst problem was solved at once.</p>
