--- a/book/index.html
+++ b/book/index.html
@@ -23,7 +23,11 @@
 
     h1 {font-size: 8em; line-height: 1em; margin-top: 3em;}
     h2 {font-size: 4em; margin-top: 4em; line-height: 1em;}
-    body {max-width: 960px; padding: 2em;}
+    body {max-width: 960px; padding: 2em; margin: auto;}
+
+    img {margin-top: 4em; max-width: 80vw; max-height: 80vh;}
+
+    small {display: block; max-width: 50vw;}
   </style>
 </head>
 <body>
@@ -39,5 +43,7 @@
   <p>Humour and familiarity are the things that always save me when I’m away from my region and make people born to the south of Rostov-on-Don feel like I’m one of them.</p>
   <p>Sentimentality is also a distinctive characteristic of a southerner. A real southerner sniffs the scent of blooming apricot to its lungs’ limits (if you know the scent, then you understand - it’s the scent of spring and a new crush!). A real southerner takes a sled and makes his family go sledding even if it starts to snow at 1 a.m., because tomorrow it won’t snow and most likely it won’t snow until next winter. A real southerner is out all night because it’s incredibly hot during the daytime! A real southerner doesn’t have compassion for one’s feelings if he doesn’t like anything, but he shows concern if he is touched.</p>
   <p>In this book I gathered the moments that I saw with a southern perspective.</p>
+  <img src="image1.jpg">
+  <p><small>A house in the old city center went under the ground so deep that its window is on the level of the ground.</small><p>
 </body>
 </html>
