--- a/olya/index.html
+++ b/olya/index.html
@@ -3,15 +3,16 @@
 <head>
   <title>partdirector</title>
   <style>
-    * {align-items: center; font-style: normal;}
+    * {vertical-align: center; align-items: center;}
+    img {display: block;}
   </style>
 </head>
 <body>
 <h1>OV</h1>
-  <img src="R1-03653-0000.jpg">
-  <img src="R1-03653-0001.jpg">
-  <img src="R1-03653-0002.jpg">
-  <img src="R1-03653-0003.jpg">
-  <img src="R1-03653-0004.jpg">
+  <img src="img/R1-03653-0000.jpg">
+  <img src="img/R1-03653-0001.jpg">
+  <img src="img/R1-03653-0002.jpg">
+  <img src="img/R1-03653-0003.jpg">
+  <img src="img/R1-03653-0004.jpg">
 </body>
 </html>
