--- a/olya/index.html
+++ b/olya/index.html
@@ -3,16 +3,39 @@
 <head>
   <title>partdirector</title>
   <style>
-    * {vertical-align: center; align-items: center;}
-    img {display: block;}
+    img {display: block; margin: 48px auto;}
+    h1, h2 {position: fixed;font-family: inter, helvetica, sans-serif;}
+    h1 {top: 24px; left: 24px; font-size: 32px;}
+    h2 {top: 24px; right: 24px; font-size: 32px;}
+
+    body {margin: 360px 24px 24px 24px;}
+    p {display: block; margin: 0 auto 24px auto; text-align: center; font-size: 1.5em;}
+
+    @media screen and (max-width: 1128px) {
+      img {width: 100%;}
+    }
+
+
+
   </style>
 </head>
 <body>
-<h1>OV</h1>
+  <h1>OV</h1>
+
+
+
   <img src="img/R1-03653-0000.jpg">
+  <p>Copy</p>
+
   <img src="img/R1-03653-0001.jpg">
   <img src="img/R1-03653-0002.jpg">
   <img src="img/R1-03653-0003.jpg">
   <img src="img/R1-03653-0004.jpg">
+
+  <script>
+   var val = document.images.length;
+   document.write("<h2>"+val+"</h2>");
+ </script>
+
 </body>
 </html>
