--- a/olya/index.html
+++ b/olya/index.html
@@ -3,13 +3,17 @@
 <head>
   <title>partdirector</title>
   <style>
+    @font-face {
+      font-family: "btp";
+      src: url("btp.woff") format('woff');
+    }
     img {display: block; margin: 64px auto 8px auto;}
-    h1, h2 {position: fixed; font-family: "Bitum", "Inter", helvetica, sans-serif; line-height: 1em; color: #121214;}
+    h1, h2 {position: fixed; font-family: "btp", "Inter", helvetica, sans-serif; line-height: 1em; color: #121214;}
     h1 {top: 24px; left: 24px; font-size: 32px;}
     h2 {top: 24px; right: 24px; font-size: 32px;}
 
     body {margin: 360px 24px 24px 24px;}
-    p {display: block; margin: 0 auto 24px auto; font-family: "Bitum", "Inter", helvetica, sans-serif; text-align: center; font-size: 1.5em; color: #121214;}
+    p {display: block; margin: 0 auto 24px auto; font-family: "btp", "Inter", helvetica, sans-serif; text-align: center; font-size: 1.5em; color: #121214;}
 
     @media screen and (max-width: 1128px) {
       img {width: 100%;}
