--- a/olya/index.html
+++ b/olya/index.html
@@ -5,7 +5,7 @@
   <style>
     @font-face {
       font-family: "btp";
-      src: url("btp.woff") format('woff');
+      src: url("btp.woff.ttf") format('woff');
     }
     img {display: block; margin: 64px auto 8px auto;}
     h1, h2 {position: fixed; font-family: "btp", "Inter", helvetica, sans-serif; line-height: 1em; color: #121214;}
