--- a/olya/index.html
+++ b/olya/index.html
@@ -9,7 +9,7 @@
     }
 
     body {margin: 50vh 24px 24px 24px;}
-    img {display: block; margin: 64px auto 8px auto;}
+    img {display: block; margin: 25vh auto 8px auto;}
 
     h1, h2 {position: fixed; font-family: "btp", "Inter", helvetica, sans-serif; line-height: 1em; font-size: 40px; color: #121214;}
     h1 {top: 24px; left: 24px;}
@@ -19,10 +19,11 @@
     footer {margin: 25vh 24px 40px 24px}
 
     @media screen and (max-width: 1128px) {
-      img {width: 100%;}
-      h1, h2 {font-size: 3em}
-      p, footer {font-size: 2em}
+      img {width: 100%; margin: 10vh auto 8px auto;}
+      h1, h2 {font-size: 5em}
+      p, footer {font-size: 2.5em}
     }
+
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
