--- a/olya/index.html
+++ b/olya/index.html
@@ -11,7 +11,7 @@
     body {margin: 50vh 24px 24px 24px;}
     img {display: block; margin: 25vh auto 8px auto;}
 
-    h1, h2 {position: fixed; font-family: "btp", "Inter", helvetica, sans-serif; line-height: 1em; font-size: 40px; color: #121214;}
+    h1, h2 {position: fixed; font-family: "btp", "Inter", helvetica, sans-serif; line-height: 1em; font-size: 40px; color: #121214; margin: 0;}
     h1 {top: 24px; left: 24px;}
     h2 {top: 24px; right: 24px;}
     p, footer {font-family: "btp", "Inter", helvetica, sans-serif; font-size: 1.5em; color: #121214; display: block;}
@@ -20,7 +20,7 @@
 
     @media screen and (max-width: 1128px) {
       img {width: 100%; margin: 10vh auto 8px auto;}
-      h1, h2 {font-size: 5em}
+      h1, h2 {font-size: 5em;}
       p, footer {font-size: 2.5em}
     }
 
@@ -47,7 +47,7 @@
   <img src="img/R1-03653-0007.jpg">
   <img src="img/R1-03653-0008.jpg">
 
-  <footer>&copy; 2022, email olya@virich, telegram @olyavirich</footer>
+  <footer>&copy;2022, email olya@virich, telegram&nbsp;@olyavirich</footer>
 
   <script>
     var imagesCount = document.images.length;
