--- a/olya/index.html
+++ b/olya/index.html
@@ -19,7 +19,7 @@
     footer {margin: 25vh 24px 40px 24px}
 
     @media screen and (max-width: 1128px) {
-      body {margin: 30vh 24px 24px 24px;}      
+      body {margin: 30vh 24px 24px 24px;}
       img {width: 100%; margin: 10vh auto 8px auto;}
       h1, h2 {font-size: 5em;}
       p, footer {font-size: 2.5em}
@@ -48,7 +48,7 @@
   <img src="img/R1-03653-0007.jpg">
   <img src="img/R1-03653-0008.jpg">
 
-  <footer>&copy;2022, email olya@virich, telegram&nbsp;@olyavirich</footer>
+  <footer>&copy;2022, Olya Virich, Krasnodar. <br>Email olya@virich, telegram&nbsp;@olyavirich</footer>
 
   <script>
     var imagesCount = document.images.length;
