--- a/olya/index.html
+++ b/olya/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
   <title>ov/bw</title>
+  <meta charset="utf-8">
+  <meta name="author" content="Olga Virich">
+  <meta name="designer" content=”Anton Prokopev”>
+  <meta name="keywords" content="photo, film, black and white, photograph, Krasnodar">
+  <meta name=”robots” content=”index,follow”>
+  <meta name="distribution" content="web">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <meta http-equiv="Content-Script-Type" content="text/javascript">
+  
   <style>
     @font-face {
       font-family: "btp";
@@ -9,7 +18,7 @@
     }
 
     body {margin: 50vh 24px 24px 24px;}
-    img {display: block; margin: 25vh auto 8px auto;}
+    img {display: block; margin: 25vh auto 24px auto;}
 
     h1, h2 {position: fixed; font-family: "btp", "Inter", helvetica, sans-serif; line-height: 1em; font-size: 40px; color: #121214; margin: 0;}
     h1 {top: 24px; left: 24px;}
@@ -20,11 +29,10 @@
 
     @media screen and (max-width: 1128px) {
       body {margin: 30vh 24px 24px 24px;}
-      img {width: 100%; margin: 10vh auto 8px auto;}
+      img {width: 100%; margin: 10vh auto 24px auto;}
       h1, h2 {font-size: 5em;}
-      p, footer {font-size: 2.5em}
+      p, footer {font-size: 2.5em;}
     }
-
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
@@ -47,6 +55,10 @@
 
   <img src="img/R1-03653-0007.jpg">
   <img src="img/R1-03653-0008.jpg">
+  <img src="img/R1-03653-0009.jpg">
+  <img src="img/R1-03653-0010.jpg">
+  <img src="img/R1-03653-0011.jpg">
+  <img src="img/R1-03653-0012.jpg">
 
   <footer>&copy;2022, Olya Virich, Krasnodar. <br>Email olya@virich, telegram&nbsp;@olyavirich</footer>
 
