--- a/olya/index.html
+++ b/olya/index.html
@@ -82,9 +82,8 @@
   <script>
     $(document).ready(function(){
         $.getJSON("images.json", function(data){
-            console.log(data.name); // Prints: Harry
-            console.log(data.age); // Prints: 14
-        }).fail(function(){
+            console.log(data);
+          }).fail(function(){
             console.log("An error has occurred.");
         });
     });
