--- a/olya/index.html
+++ b/olya/index.html
@@ -83,6 +83,9 @@
     $(document).ready(function(){
         $.getJSON("images.json", function(data){
             console.log(data);
+            $("data").each(function() {
+              console.log($(this).prop("url"));
+            });
           }).fail(function(){
             console.log("An error has occurred.");
         });
