--- a/olya/index.html
+++ b/olya/index.html
@@ -81,9 +81,9 @@
 
   <script>
     $(document).ready(function(){
-        $.getJSON("images.json", function(data){
-            console.log(data);
-            jQuery.each(data, function() {
+        $.getJSON("images.json", function(imagesJson){
+            console.log(imagesJson);
+            jQuery.each(imagesJson, function() {
               console.log($(this).prop("url"));
             });
           }).fail(function(){
