--- a/olya/index.html
+++ b/olya/index.html
@@ -25,7 +25,7 @@
     h2 {top: 24px; right: 24px;}
     p, footer {font-family: "btp", "Inter", helvetica, sans-serif; font-size: 1.5em; color: #121214; display: block;}
     p { margin: 0 auto 24px auto;  text-align: center; }
-    footer {margin: 25vh 24px 40px 24px}
+    footer {margin: 25vh 0 48px 0}
 
     .menu {
       display: block;
