--- a/olya/index.html
+++ b/olya/index.html
@@ -52,6 +52,7 @@
     <img src="img/R1-03653-0001.jpg">
     <img src="img/R1-03653-0002.jpg">
   </div>
+  
   <h2 id="num"></h2>
 
   <div class="content">
@@ -60,7 +61,7 @@
   <footer>&copy;2022, Olya Virich, Krasnodar. <br>Email olya@virich, telegram&nbsp;@olyavirich</footer>
 
   <script>
-    const content = document.querySelector('content');
+    const content = document.querySelector('.content');
 
     $(document).ready(function(){
         $.getJSON("images.json", function(imagesJson){
