--- a/olya/index.html
+++ b/olya/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>ov/bw</title>
+
   <meta charset="utf-8">
   <meta name="author" content="Olga Virich">
   <meta name="designer" content=”Anton Prokopev”>
@@ -55,8 +56,7 @@
 
   <h2 id="num"></h2>
 
-  <div class="content">
-  </div>
+  <div class="content"></div>
 
   <footer>&copy;2022, Olya Virich, Krasnodar. <br>Email olya@virich, telegram&nbsp;@olyavirich</footer>
 
