--- a/olya/index.html
+++ b/olya/index.html
@@ -56,11 +56,31 @@
 
   <h2 id="num"></h2>
 
-  <div class="content"></div>
+  <div class="content">
+    <img src="img/R1-03653-0001.jpg">
+    <p>Copy</p>
+    <img src="img/R1-03653-0002.jpg">
+    <img src="img/R1-03653-0003.jpg">
+    <p>Copy</p>
+    <img src="img/R1-03653-0004.jpg">
+    <img src="img/R1-03653-0005.jpg">
+    <img src="img/R1-03653-0006.jpg">
+    <img src="img/R1-03653-0007.jpg">
+    <img src="img/R1-03653-0008.jpg">
+    <p>Copy</p>
+    <img src="img/R1-03653-0009.jpg">
+    <img src="img/R1-03653-0010.jpg">
+    <img src="img/R1-03653-0011.jpg">
+    <p>Copy</p>
+    <img src="img/R1-03653-0012.jpg">
+    <img src="img/R1-03653-0013.jpg">
+    <img src="img/R1-03653-0014.jpg">
+  </div>
 
   <footer>&copy;2022, Olya Virich, Krasnodar. <br>Email olya@virich, telegram&nbsp;@olyavirich</footer>
 
   <script>
+    /*
     var stringContent = '';
 
     $(document).ready(function(){
@@ -77,6 +97,7 @@
             console.log("An error has occurred.");
         });
     });
+    */
 
     var imagesCount = document.images.length;
     const num = document.querySelector('#num');
