--- a/olya/index.html
+++ b/olya/index.html
@@ -50,31 +50,60 @@
   <h1>OV<br>BW</h1>
 
   <div class="menu">
-    <img src="img/R1-03653-0001.jpg">
-    <img src="img/R1-03653-0002.jpg">
   </div>
 
   <h2 id="num"></h2>
 
   <div class="content">
-    <img src="img/R1-03653-0001.jpg">
-    <p>Copy</p>
-    <img src="img/R1-03653-0002.jpg">
-    <img src="img/R1-03653-0003.jpg">
-    <p>Copy</p>
-    <img src="img/R1-03653-0004.jpg">
-    <img src="img/R1-03653-0005.jpg">
-    <img src="img/R1-03653-0006.jpg">
-    <img src="img/R1-03653-0007.jpg">
-    <img src="img/R1-03653-0008.jpg">
-    <p>Copy</p>
-    <img src="img/R1-03653-0009.jpg">
-    <img src="img/R1-03653-0010.jpg">
-    <img src="img/R1-03653-0011.jpg">
-    <p>Copy</p>
-    <img src="img/R1-03653-0012.jpg">
-    <img src="img/R1-03653-0013.jpg">
-    <img src="img/R1-03653-0014.jpg">
+    <p>Türkiye</p>
+    <img src="img/R1-03626-0001.JPG">
+    <img src="img/R1-03626-0017.JPG">
+    <img src="img/R1-03626-0018.JPG">
+    <img src="img/R1-03626-0023.JPG">
+    <img src="img/R1-03626-0027.JPG">
+    <img src="img/R1-03626-0030.JPG">
+    <img src="img/R1-03626-0032.JPG">
+    <img src="img/R1-03626-0034.JPG">
+
+    <img src="img/R1-03654-0004.jpg">
+    <img src="img/R1-03654-0010.jpg">
+    <img src="img/R1-03654-0012.jpg">
+    <img src="img/R1-03654-0013.jpg">
+    <img src="img/R1-03654-0015.jpg">
+    <img src="img/R1-03654-0017.jpg">
+    <img src="img/R1-03654-0018.jpg">
+    <img src="img/R1-03654-0019.jpg">
+    <img src="img/R1-03654-0020.jpg">
+    <img src="img/R1-03654-0021.jpg">
+    <img src="img/R1-03654-0023.jpg">
+    <img src="img/R1-03654-0024.jpg">
+    <img src="img/R1-03654-0032.jpg">
+    <img src="img/R1-03654-0034.jpg">
+
+    <img src="img/R1-03655-0000.jpg">
+    <img src="img/R1-03655-0001.jpg">
+    <img src="img/R1-03655-0009.jpg">
+    <img src="img/R1-03655-0011.jpg">
+    <img src="img/R1-03655-0014.jpg">
+    <img src="img/R1-03655-0016.jpg">
+    <img src="img/R1-03655-0020.jpg">
+    <img src="img/R1-03655-0021.jpg">
+    <img src="img/R1-03655-0022.jpg">
+    <img src="img/R1-03655-0023.jpg">
+    <img src="img/R1-03655-0025.jpg">
+    <img src="img/R1-03655-0032.jpg">
+    <img src="img/R1-03655-0033.jpg">
+
+    <img src="img/R1-03657-0000.jpg">
+    <img src="img/R1-03657-0003.jpg">
+    <img src="img/R1-03657-0008.jpg">
+    <img src="img/R1-03657-0017.jpg">
+    <img src="img/R1-03657-0023.jpg">
+    <img src="img/R1-03657-0027.jpg">
+    <img src="img/R1-03657-0028.jpg">
+    <img src="img/R1-03657-0033.jpg">
+    <img src="img/R1-03657-0034.jpg">
+
   </div>
 
   <footer>&copy;2022, Olya Virich, Krasnodar. <br>Email olya@virich, telegram&nbsp;@olyavirich</footer>
