--- a/olya/index.html
+++ b/olya/index.html
@@ -56,14 +56,14 @@
 
   <div class="content">
     <p>Türkiye</p>
-    <img src="img/R1-03626-0001.JPG">
-    <img src="img/R1-03626-0017.JPG">
-    <img src="img/R1-03626-0018.JPG">
-    <img src="img/R1-03626-0023.JPG">
-    <img src="img/R1-03626-0027.JPG">
-    <img src="img/R1-03626-0030.JPG">
-    <img src="img/R1-03626-0032.JPG">
-    <img src="img/R1-03626-0034.JPG">
+    <img src="img/R1-03626-0001.jpg">
+    <img src="img/R1-03626-0017.jpg">
+    <img src="img/R1-03626-0018.jpg">
+    <img src="img/R1-03626-0023.jpg">
+    <img src="img/R1-03626-0027.jpg">
+    <img src="img/R1-03626-0030.jpg">
+    <img src="img/R1-03626-0032.jpg">
+    <img src="img/R1-03626-0034.jpg">
 
     <img src="img/R1-03654-0004.jpg">
     <img src="img/R1-03654-0010.jpg">
