--- a/olya/index.html
+++ b/olya/index.html
@@ -18,12 +18,13 @@
       src: url("btp.woff.ttf") format('woff');
     }
 
-    body {margin: 50vh 24px 24px 24px;}
+    body {margin: 24vh 24px 24px 24px;}
     img {display: block; margin: 25vh auto 24px auto;}
 
-    h1, h2 {position: fixed; font-family: "btp", "Inter", helvetica, sans-serif; line-height: 1em; font-size: 40px; color: #121214; margin: 0;}
+    h1, h2, h3 {position: fixed; font-family: "btp", "Inter", helvetica, sans-serif; line-height: 1em; font-size: 40px; color: #121214; margin: 0;}
     h1 {top: 24px;left: 24px;}
     h2 {top: 24px; right: 24px;}
+    h3 {margin: 24px auto 24px auto;  text-align: center;}
     p, footer {font-family: "btp", "Inter", helvetica, sans-serif; font-size: 1.5em; color: #121214; display: block;}
     p { margin: 0 auto 24px auto;  text-align: center; }
     footer {margin: 25vh 0 48px 0}
@@ -55,7 +56,7 @@
   <h2 id="num"></h2>
 
   <div class="content">
-    <p>Türkiye</p>
+    <h3>Türkiye</h3>
     <img src="img/R1-03626-0001.jpg">
     <img src="img/R1-03626-0017.jpg">
     <img src="img/R1-03626-0018.jpg">
