--- a/olya/index.html
+++ b/olya/index.html
@@ -22,9 +22,9 @@
     img {display: block; margin: 25vh auto 24px auto;}
 
     h1, h2, h3 {position: fixed; font-family: "btp", "Inter", helvetica, sans-serif; line-height: 1em; font-size: 40px; color: #121214; margin: 0;}
-    h1 {top: 24px;left: 24px;}
+    h1 {top: 24px; left: 24px;}
     h2 {top: 24px; right: 24px;}
-    h3 {margin: 24px auto 24px auto;  text-align: center;}
+    h3 {top: 24px; left: 240px;}
     p, footer {font-family: "btp", "Inter", helvetica, sans-serif; font-size: 1.5em; color: #121214; display: block;}
     p { margin: 0 auto 24px auto;  text-align: center; }
     footer {margin: 25vh 0 48px 0}
@@ -43,12 +43,14 @@
       img {width: 100%; margin: 10vh auto 24px auto;}
       h1, h2 {font-size: 5em;}
       p, footer {font-size: 2.5em;}
+      h3 {position: relative; top: 96px; font-size: 5em;}
     }
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
   <h1>OV<br>BW</h1>
+  <h3>Türkiye</h3>
 
   <div class="menu">
   </div>
@@ -56,7 +58,6 @@
   <h2 id="num"></h2>
 
   <div class="content">
-    <h3>Türkiye</h3>
     <img src="img/R1-03626-0001.jpg">
     <img src="img/R1-03626-0017.jpg">
     <img src="img/R1-03626-0018.jpg">
