--- a/olya/index.html
+++ b/olya/index.html
@@ -58,7 +58,19 @@
   <h2 id="num"></h2>
 
   <div class="content">
-    <img src="img/R1-03626-0001.jpg">
+    <p>We can put few words here. Maybe a short story about something.</p>
+
+    <img src="img/R1-03626-0001.jpg" alt="fish">
+    <img src="img/R1-03654-0004.jpg" alt="room">
+    <img src="img/R1-03654-0012.jpg" alt="towel">
+    <img src="img/R1-03657-0027.jpg" alt="clouds">
+    <img src="img/R1-03655-0009.jpg" alt="mark">
+    <img src="img/R1-03657-0017.jpg" alt="teatr">
+    <img src="img/R1-03657-0023.jpg" alt="columns">
+    <img src="img/R1-03654-0024.jpg" alt="column">
+    <img src="img/R1-03657-0003.jpg" alt="self">
+    <img src="img/R1-03657-0008.jpg" alt="wall">
+
     <img src="img/R1-03626-0017.jpg">
     <img src="img/R1-03626-0018.jpg">
     <img src="img/R1-03626-0023.jpg">
@@ -67,9 +79,7 @@
     <img src="img/R1-03626-0032.jpg">
     <img src="img/R1-03626-0034.jpg">
 
-    <img src="img/R1-03654-0004.jpg">
     <img src="img/R1-03654-0010.jpg">
-    <img src="img/R1-03654-0012.jpg">
     <img src="img/R1-03654-0013.jpg">
     <img src="img/R1-03654-0015.jpg">
     <img src="img/R1-03654-0017.jpg">
@@ -78,13 +88,11 @@
     <img src="img/R1-03654-0020.jpg">
     <img src="img/R1-03654-0021.jpg">
     <img src="img/R1-03654-0023.jpg">
-    <img src="img/R1-03654-0024.jpg">
     <img src="img/R1-03654-0032.jpg">
     <img src="img/R1-03654-0034.jpg">
 
     <img src="img/R1-03655-0000.jpg">
     <img src="img/R1-03655-0001.jpg">
-    <img src="img/R1-03655-0009.jpg">
     <img src="img/R1-03655-0011.jpg">
     <img src="img/R1-03655-0014.jpg">
     <img src="img/R1-03655-0016.jpg">
@@ -97,11 +105,8 @@
     <img src="img/R1-03655-0033.jpg">
 
     <img src="img/R1-03657-0000.jpg">
-    <img src="img/R1-03657-0003.jpg">
-    <img src="img/R1-03657-0008.jpg">
-    <img src="img/R1-03657-0017.jpg">
-    <img src="img/R1-03657-0023.jpg">
-    <img src="img/R1-03657-0027.jpg">
+
+
     <img src="img/R1-03657-0028.jpg">
     <img src="img/R1-03657-0033.jpg">
     <img src="img/R1-03657-0034.jpg">
