--- a/olya/index.html
+++ b/olya/index.html
@@ -70,6 +70,8 @@
     <img src="img/R1-03657-0003.jpg" alt="self">
     <img src="img/R1-03657-0008.jpg" alt="wall">
 
+    <p>Stop.</p>
+
     <img src="img/R1-03626-0017.jpg">
     <img src="img/R1-03626-0018.jpg">
     <img src="img/R1-03626-0023.jpg">
