--- a/olya/index.html
+++ b/olya/index.html
@@ -43,7 +43,7 @@
       img {width: 100%; margin: 10vh auto 24px auto;}
       h1, h2 {font-size: 5em;}
       p, footer {font-size: 2.5em;}
-      h3 {position: relative; top: 96px; font-size: 5em;}
+      h3 {display: none;}
     }
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
