--- a/olya/index.html
+++ b/olya/index.html
@@ -69,8 +69,14 @@
     <img src="img/R1-03654-0024.jpg" alt="column">
     <img src="img/R1-03657-0003.jpg" alt="self">
     <img src="img/R1-03657-0008.jpg" alt="wall">
+    <img src="img/R1-03654-0032.jpg" alt="city">
+    <img src="img/R1-03657-0000.jpg" alt="city">
+    <img src="img/R1-03655-0014.jpg" alt="view">
+    <img src="img/R1-03655-0016.jpg" alt="signs">
+
 
     <p>Stop.</p>
+
 
     <img src="img/R1-03626-0017.jpg">
     <img src="img/R1-03626-0018.jpg">
@@ -89,14 +95,12 @@
     <img src="img/R1-03654-0020.jpg">
     <img src="img/R1-03654-0021.jpg">
     <img src="img/R1-03654-0023.jpg">
-    <img src="img/R1-03654-0032.jpg">
     <img src="img/R1-03654-0034.jpg">
 
     <img src="img/R1-03655-0000.jpg">
     <img src="img/R1-03655-0001.jpg">
     <img src="img/R1-03655-0011.jpg">
-    <img src="img/R1-03655-0014.jpg">
-    <img src="img/R1-03655-0016.jpg">
+
     <img src="img/R1-03655-0020.jpg">
     <img src="img/R1-03655-0021.jpg">
     <img src="img/R1-03655-0022.jpg">
@@ -105,7 +109,6 @@
     <img src="img/R1-03655-0032.jpg">
     <img src="img/R1-03655-0033.jpg">
 
-    <img src="img/R1-03657-0000.jpg">
 
 
     <img src="img/R1-03657-0028.jpg">
